lib/core/api/Ximu3.h

typedef struct XIMU3_Connection XIMU3_Connection;
typedef struct XIMU3_MagnetometerMessage
{
    uint64_t timestamp;
    float x;
    float y;
    float z;
} XIMU3_MagnetometerMessage;
typedef void (*XIMU3_CallbackMagnetometerMessage)(struct XIMU3_MagnetometerMessage data, void *context);
typedef struct XIMU3_QuaternionMessage
{
    uint64_t timestamp;
    float w;
    float x;
    float y;
    float z;
} XIMU3_QuaternionMessage;
typedef void (*XIMU3_CallbackQuaternionMessage)(struct XIMU3_QuaternionMessage data, void *context);
typedef struct XIMU3_RotationMatrixMessage
{
    uint64_t timestamp;
    float xx;
    float xy;
    float xz;
    float yx;
    float yy;
    float yz;
    float zx;
    float zy;
    float zz;
} XIMU3_RotationMatrixMessage;
typedef void (*XIMU3_CallbackRotationMatrixMessage)(struct XIMU3_RotationMatrixMessage data, void *context);
typedef struct XIMU3_EulerAnglesMessage
{
    uint64_t timestamp;
    float roll;
    float pitch;
    float yaw;
} XIMU3_EulerAnglesMessage;
typedef void (*XIMU3_CallbackEulerAnglesMessage)(struct XIMU3_EulerAnglesMessage data, void *context);
typedef struct XIMU3_LinearAccelerationMessage
{
    uint64_t timestamp;
    float quaternion_w;
    float quaternion_x;
    float quaternion_y;
    float quaternion_z;
    float acceleration_x;
    float acceleration_y;
    float acceleration_z;
} XIMU3_LinearAccelerationMessage;
typedef void (*XIMU3_CallbackLinearAccelerationMessage)(struct XIMU3_LinearAccelerationMessage data, void *context);
typedef struct XIMU3_EarthAccelerationMessage
{
    uint64_t timestamp;
    float quaternion_w;
    float quaternion_x;
    float quaternion_y;
    float quaternion_z;
    float acceleration_x;
    float acceleration_y;
    float acceleration_z;
} XIMU3_EarthAccelerationMessage;
typedef void (*XIMU3_CallbackEarthAccelerationMessage)(struct XIMU3_EarthAccelerationMessage data, void *context);
typedef struct XIMU3_AhrsStatusMessage
{
    uint64_t timestamp;
    float initialising;
    float angular_rate_recovery;
    float acceleration_recovery;
    float magnetic_recovery;
} XIMU3_AhrsStatusMessage;
typedef void (*XIMU3_CallbackAhrsStatusMessage)(struct XIMU3_AhrsStatusMessage data, void *context);
typedef struct XIMU3_HighGAccelerometerMessage
{
    uint64_t timestamp;
    float x;
    float y;
    float z;
} XIMU3_HighGAccelerometerMessage;
typedef void (*XIMU3_CallbackHighGAccelerometerMessage)(struct XIMU3_HighGAccelerometerMessage data, void *context);
typedef struct XIMU3_TemperatureMessage
{
    uint64_t timestamp;
    float temperature;
} XIMU3_TemperatureMessage;
typedef void (*XIMU3_CallbackTemperatureMessage)(struct XIMU3_TemperatureMessage data, void *context);
typedef struct XIMU3_BatteryMessage
{
    uint64_t timestamp;
    float percentage;
    float voltage;
    float charging_status;
} XIMU3_BatteryMessage;
typedef void (*XIMU3_CallbackBatteryMessage)(struct XIMU3_BatteryMessage data, void *context);
typedef struct XIMU3_RssiMessage
{
    uint64_t timestamp;
    float percentage;
    float power;
} XIMU3_RssiMessage;
typedef void (*XIMU3_CallbackRssiMessage)(struct XIMU3_RssiMessage data, void *context);
typedef struct XIMU3_SerialAccessoryMessage
{
    uint64_t timestamp;
    char char_array[XIMU3_DATA_MESSAGE_CHAR_ARRAY_SIZE];
    size_t number_of_bytes;
} XIMU3_SerialAccessoryMessage;
typedef void (*XIMU3_CallbackSerialAccessoryMessage)(struct XIMU3_SerialAccessoryMessage data, void *context);
typedef struct XIMU3_NotificationMessage
{
    uint64_t timestamp;
    char char_array[XIMU3_DATA_MESSAGE_CHAR_ARRAY_SIZE];
    size_t number_of_bytes;
} XIMU3_NotificationMessage;
typedef void (*XIMU3_CallbackNotificationMessage)(struct XIMU3_NotificationMessage data, void *context);
typedef struct XIMU3_ErrorMessage
{
    uint64_t timestamp;
    char char_array[XIMU3_DATA_MESSAGE_CHAR_ARRAY_SIZE];
    size_t number_of_bytes;
} XIMU3_ErrorMessage;
typedef void (*XIMU3_CallbackErrorMessage)(struct XIMU3_ErrorMessage data, void *context);
uint64_t XIMU3_connection_add_magnetometer_callback(struct XIMU3_Connection *connection, XIMU3_CallbackMagnetometerMessage callback, void *context);
uint64_t XIMU3_connection_add_quaternion_callback(struct XIMU3_Connection *connection, XIMU3_CallbackQuaternionMessage callback, void *context);
uint64_t XIMU3_connection_add_rotation_matrix_callback(struct XIMU3_Connection *connection, XIMU3_CallbackRotationMatrixMessage callback, void *context);
uint64_t XIMU3_connection_add_euler_angles_callback(struct XIMU3_Connection *connection, XIMU3_CallbackEulerAnglesMessage callback, void *context);
uint64_t XIMU3_connection_add_linear_acceleration_callback(struct XIMU3_Connection *connection, XIMU3_CallbackLinearAccelerationMessage callback, void *context);
uint64_t XIMU3_connection_add_earth_acceleration_callback(struct XIMU3_Connection *connection, XIMU3_CallbackEarthAccelerationMessage callback, void *context);
uint64_t XIMU3_connection_add_ahrs_status_callback(struct XIMU3_Connection *connection, XIMU3_CallbackAhrsStatusMessage callback, void *context);
uint64_t XIMU3_connection_add_high_g_accelerometer_callback(struct XIMU3_Connection *connection, XIMU3_CallbackHighGAccelerometerMessage callback, void *context);
uint64_t XIMU3_connection_add_temperature_callback(struct XIMU3_Connection *connection, XIMU3_CallbackTemperatureMessage callback, void *context);
uint64_t XIMU3_connection_add_battery_callback(struct XIMU3_Connection *connection, XIMU3_CallbackBatteryMessage callback, void *context);
uint64_t XIMU3_connection_add_rssi_callback(struct XIMU3_Connection *connection, XIMU3_CallbackRssiMessage callback, void *context);
uint64_t XIMU3_connection_add_serial_accessory_callback(struct XIMU3_Connection *connection, XIMU3_CallbackSerialAccessoryMessage callback, void *context);
uint64_t XIMU3_connection_add_notification_callback(struct XIMU3_Connection *connection, XIMU3_CallbackNotificationMessage callback, void *context);
uint64_t XIMU3_connection_add_error_callback(struct XIMU3_Connection *connection, XIMU3_CallbackErrorMessage callback, void *context);
uint64_t XIMU3_connection_add_end_of_file_callback(struct XIMU3_Connection *connection, void (*callback)(void *context), void *context);