lib/core/api/ximu3_bindings.g.dart


  late final _XIMU3_connection_add_magnetometer_callbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(ffi.Pointer<XIMU3_Connection>,
                  XIMU3_CallbackMagnetometerMessage, ffi.Pointer<ffi.Void>)>>(
      'XIMU3_connection_add_magnetometer_callback');
  late final _XIMU3_connection_add_magnetometer_callback =
      _XIMU3_connection_add_magnetometer_callbackPtr.asFunction<
          int Function(ffi.Pointer<XIMU3_Connection>,
              XIMU3_CallbackMagnetometerMessage, ffi.Pointer<ffi.Void>)>();

  int XIMU3_connection_add_quaternion_callback(
    ffi.Pointer<XIMU3_Connection> connection,
    XIMU3_CallbackQuaternionMessage callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _XIMU3_connection_add_quaternion_callback(
      connection,
      callback,
      context,
    );
  }

  late final _XIMU3_connection_add_quaternion_callbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(ffi.Pointer<XIMU3_Connection>,
                  XIMU3_CallbackQuaternionMessage, ffi.Pointer<ffi.Void>)>>(
      'XIMU3_connection_add_quaternion_callback');
  late final _XIMU3_connection_add_quaternion_callback =
      _XIMU3_connection_add_quaternion_callbackPtr.asFunction<
          int Function(ffi.Pointer<XIMU3_Connection>,
              XIMU3_CallbackQuaternionMessage, ffi.Pointer<ffi.Void>)>();

  int XIMU3_connection_add_rotation_matrix_callback(
    ffi.Pointer<XIMU3_Connection> connection,
    XIMU3_CallbackRotationMatrixMessage callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _XIMU3_connection_add_rotation_matrix_callback(
      connection,
      callback,
      context,
    );
  }

  late final _XIMU3_connection_add_rotation_matrix_callbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(ffi.Pointer<XIMU3_Connection>,
                  XIMU3_CallbackRotationMatrixMessage, ffi.Pointer<ffi.Void>)>>(
      'XIMU3_connection_add_rotation_matrix_callback');
  late final _XIMU3_connection_add_rotation_matrix_callback =
      _XIMU3_connection_add_rotation_matrix_callbackPtr.asFunction<
          int Function(ffi.Pointer<XIMU3_Connection>,
              XIMU3_CallbackRotationMatrixMessage, ffi.Pointer<ffi.Void>)>();

  int XIMU3_connection_add_euler_angles_callback(
    ffi.Pointer<XIMU3_Connection> connection,
    XIMU3_CallbackEulerAnglesMessage callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _XIMU3_connection_add_euler_angles_callback(
      connection,
      callback,
      context,
    );
  }

  late final _XIMU3_connection_add_euler_angles_callbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(ffi.Pointer<XIMU3_Connection>,
                  XIMU3_CallbackEulerAnglesMessage, ffi.Pointer<ffi.Void>)>>(
      'XIMU3_connection_add_euler_angles_callback');
  late final _XIMU3_connection_add_euler_angles_callback =
      _XIMU3_connection_add_euler_angles_callbackPtr.asFunction<
          int Function(ffi.Pointer<XIMU3_Connection>,
              XIMU3_CallbackEulerAnglesMessage, ffi.Pointer<ffi.Void>)>();

  int XIMU3_connection_add_linear_acceleration_callback(
    ffi.Pointer<XIMU3_Connection> connection,
    XIMU3_CallbackLinearAccelerationMessage callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _XIMU3_connection_add_linear_acceleration_callback(
      connection,
      callback,
      context,
    );
  }

  late final _XIMU3_connection_add_linear_acceleration_callbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<XIMU3_Connection>,
                  XIMU3_CallbackLinearAccelerationMessage,
                  ffi.Pointer<ffi.Void>)>>(
      'XIMU3_connection_add_linear_acceleration_callback');
  late final _XIMU3_connection_add_linear_acceleration_callback =
      _XIMU3_connection_add_linear_acceleration_callbackPtr.asFunction<
          int Function(
              ffi.Pointer<XIMU3_Connection>,
              XIMU3_CallbackLinearAccelerationMessage,
              ffi.Pointer<ffi.Void>)>();

  int XIMU3_connection_add_earth_acceleration_callback(
    ffi.Pointer<XIMU3_Connection> connection,
    XIMU3_CallbackEarthAccelerationMessage callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _XIMU3_connection_add_earth_acceleration_callback(
      connection,
      callback,
      context,
    );
  }

  late final _XIMU3_connection_add_earth_acceleration_callbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<XIMU3_Connection>,
                  XIMU3_CallbackEarthAccelerationMessage,
                  ffi.Pointer<ffi.Void>)>>(
      'XIMU3_connection_add_earth_acceleration_callback');
  late final _XIMU3_connection_add_earth_acceleration_callback =
      _XIMU3_connection_add_earth_acceleration_callbackPtr.asFunction<
          int Function(ffi.Pointer<XIMU3_Connection>,
              XIMU3_CallbackEarthAccelerationMessage, ffi.Pointer<ffi.Void>)>();

  int XIMU3_connection_add_ahrs_status_callback(
    ffi.Pointer<XIMU3_Connection> connection,
    XIMU3_CallbackAhrsStatusMessage callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _XIMU3_connection_add_ahrs_status_callback(
      connection,
      callback,
      context,
    );
  }

  late final _XIMU3_connection_add_ahrs_status_callbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(ffi.Pointer<XIMU3_Connection>,
                  XIMU3_CallbackAhrsStatusMessage, ffi.Pointer<ffi.Void>)>>(
      'XIMU3_connection_add_ahrs_status_callback');
  late final _XIMU3_connection_add_ahrs_status_callback =
      _XIMU3_connection_add_ahrs_status_callbackPtr.asFunction<
          int Function(ffi.Pointer<XIMU3_Connection>,
              XIMU3_CallbackAhrsStatusMessage, ffi.Pointer<ffi.Void>)>();

  int XIMU3_connection_add_high_g_accelerometer_callback(
    ffi.Pointer<XIMU3_Connection> connection,
    XIMU3_CallbackHighGAccelerometerMessage callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _XIMU3_connection_add_high_g_accelerometer_callback(
      connection,
      callback,
      context,
    );
  }

  late final _XIMU3_connection_add_high_g_accelerometer_callbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<XIMU3_Connection>,
                  XIMU3_CallbackHighGAccelerometerMessage,
                  ffi.Pointer<ffi.Void>)>>(
      'XIMU3_connection_add_high_g_accelerometer_callback');
  late final _XIMU3_connection_add_high_g_accelerometer_callback =
      _XIMU3_connection_add_high_g_accelerometer_callbackPtr.asFunction<
          int Function(
              ffi.Pointer<XIMU3_Connection>,
              XIMU3_CallbackHighGAccelerometerMessage,
              ffi.Pointer<ffi.Void>)>();

  int XIMU3_connection_add_temperature_callback(
    ffi.Pointer<XIMU3_Connection> connection,
    XIMU3_CallbackTemperatureMessage callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _XIMU3_connection_add_temperature_callback(
      connection,
      callback,
      context,
    );
  }

  late final _XIMU3_connection_add_temperature_callbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(ffi.Pointer<XIMU3_Connection>,
                  XIMU3_CallbackTemperatureMessage, ffi.Pointer<ffi.Void>)>>(
      'XIMU3_connection_add_temperature_callback');
  late final _XIMU3_connection_add_temperature_callback =
      _XIMU3_connection_add_temperature_callbackPtr.asFunction<
          int Function(ffi.Pointer<XIMU3_Connection>,
              XIMU3_CallbackTemperatureMessage, ffi.Pointer<ffi.Void>)>();

  int XIMU3_connection_add_battery_callback(
    ffi.Pointer<XIMU3_Connection> connection,
    XIMU3_CallbackBatteryMessage callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _XIMU3_connection_add_battery_callback(
      connection,
      callback,
      context,
    );
  }

  late final _XIMU3_connection_add_battery_callbackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(
              ffi.Pointer<XIMU3_Connection>,
              XIMU3_CallbackBatteryMessage,
              ffi.Pointer<ffi.Void>)>>('XIMU3_connection_add_battery_callback');
  late final _XIMU3_connection_add_battery_callback =
      _XIMU3_connection_add_battery_callbackPtr.asFunction<
          int Function(ffi.Pointer<XIMU3_Connection>,
              XIMU3_CallbackBatteryMessage, ffi.Pointer<ffi.Void>)>();

  int XIMU3_connection_add_rssi_callback(
    ffi.Pointer<XIMU3_Connection> connection,
    XIMU3_CallbackRssiMessage callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _XIMU3_connection_add_rssi_callback(
      connection,
      callback,
      context,
    );
  }

  late final _XIMU3_connection_add_rssi_callbackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(
              ffi.Pointer<XIMU3_Connection>,
              XIMU3_CallbackRssiMessage,
              ffi.Pointer<ffi.Void>)>>('XIMU3_connection_add_rssi_callback');
  late final _XIMU3_connection_add_rssi_callback =
      _XIMU3_connection_add_rssi_callbackPtr.asFunction<
          int Function(ffi.Pointer<XIMU3_Connection>, XIMU3_CallbackRssiMessage,
              ffi.Pointer<ffi.Void>)>();

  int XIMU3_connection_add_serial_accessory_callback(
    ffi.Pointer<XIMU3_Connection> connection,
    XIMU3_CallbackSerialAccessoryMessage callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _XIMU3_connection_add_serial_accessory_callback(
      connection,
      callback,
      context,
    );
  }

  late final _XIMU3_connection_add_serial_accessory_callbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<XIMU3_Connection>,
                  XIMU3_CallbackSerialAccessoryMessage,
                  ffi.Pointer<ffi.Void>)>>(
      'XIMU3_connection_add_serial_accessory_callback');
  late final _XIMU3_connection_add_serial_accessory_callback =
      _XIMU3_connection_add_serial_accessory_callbackPtr.asFunction<
          int Function(ffi.Pointer<XIMU3_Connection>,
              XIMU3_CallbackSerialAccessoryMessage, ffi.Pointer<ffi.Void>)>();

  int XIMU3_connection_add_notification_callback(
    ffi.Pointer<XIMU3_Connection> connection,
    XIMU3_CallbackNotificationMessage callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _XIMU3_connection_add_notification_callback(
      connection,
      callback,
      context,
    );
  }

  late final _XIMU3_connection_add_notification_callbackPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(ffi.Pointer<XIMU3_Connection>,
                  XIMU3_CallbackNotificationMessage, ffi.Pointer<ffi.Void>)>>(
      'XIMU3_connection_add_notification_callback');
  late final _XIMU3_connection_add_notification_callback =
      _XIMU3_connection_add_notification_callbackPtr.asFunction<
          int Function(ffi.Pointer<XIMU3_Connection>,
              XIMU3_CallbackNotificationMessage, ffi.Pointer<ffi.Void>)>();

  int XIMU3_connection_add_error_callback(
    ffi.Pointer<XIMU3_Connection> connection,
    XIMU3_CallbackErrorMessage callback,
    ffi.Pointer<ffi.Void> context,
  ) {
    return _XIMU3_connection_add_error_callback(
      connection,
      callback,
      context,
    );
  }

  late final _XIMU3_connection_add_error_callbackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(
              ffi.Pointer<XIMU3_Connection>,
              XIMU3_CallbackErrorMessage,
              ffi.Pointer<ffi.Void>)>>('XIMU3_connection_add_error_callback');
  late final _XIMU3_connection_add_error_callback =
      _XIMU3_connection_add_error_callbackPtr.asFunction<
          int Function(ffi.Pointer<XIMU3_Connection>,
              XIMU3_CallbackErrorMessage, ffi.Pointer<ffi.Void>)>();
